--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </p>
 
                 </div>
-                <a class="py-2 btn btn-primary btn-sm no-border btn-cream text-medium" href="websensor/indexx.php" role="button">Click Here</a>
+                <a class="py-2 btn btn-primary btn-sm no-border btn-cream text-medium" href="websensor/index.php" role="button">Click Here</a>
             </div>
 
             <div class="border-bottom pb-4 col-12 product d-flex align-items-center mt-4 shadow p-3 mb-1 bg-white rounded">
